--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ dist: trusty
 sudo: false
 services: mongodb
 before_script:
+  - rm -rf ./node_modules && yarn
   - sh ./scripts/build.sh
 script:
   - sh ./scripts/style-check.sh
   - npm run test --silent
-cache: yarn
+cache:
+  yarn: false
