--- a/packages/tyranid/package.json
+++ b/packages/tyranid/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tyranid",
   "version": "0.5.2",
-  "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
+  "description":
+    "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/src/tyranid.js",
   "typings": "src/tyranid.d.ts",
   "scripts": {
@@ -38,7 +39,6 @@
     "moment": "2.20.1",
     "on-finished": "2.3.0",
     "socket.io": "2.0.3",
-    "ts-node": "^3.2.0",
     "uglify-js": "2.8.16",
     "uuid": "^3.1.0"
   },
