--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
     "clean": "sh ./scripts/clean.sh",
     "build": "sh ./scripts/build.sh",
     "nd": "npm run clean && yarn",
-    "test":
-      "npm run build && npm run prettier && npm run lint && sh ./scripts/test.sh",
-    "lint":
-      "tslint './packages/*/{test,src}/{!typings}/*.{ts,js}' --format stylish --fix",
-    "prettier":
-      "prettier --write --loglevel error --single-quote true './packages/*/{test,src}/**/*.{ts,js}'",
+    "test": "npm run build && npm run prettier && npm run lint && sh ./scripts/test.sh",
+    "lint": "tslint './packages/*/{test,src}/{!typings}/*.{ts,js}' --format stylish --fix",
+    "prettier": "prettier --write --loglevel error --single-quote true \"./packages/*/{test,src}/**/*.{ts,js}\"",
     "watch": "cd ./packages/tyranid && npm run watch",
     "bump": "npm run test && lerna publish"
   },
