--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": ["packages/*"],
   "scripts": {
     "docs": "ts-node ./doc/doc.js",
     "clean": "sh ./scripts/clean.sh",
     "build": "sh ./scripts/build.sh",
     "nd": "npm run clean && yarn",
-    "test": "npm run build && npm run prettier && npm run lint && sh ./scripts/test.sh",
-    "lint": "tslint './packages/*/{test,src}/{!typings}/*.{ts,js}' --format stylish --fix",
-    "prettier": "prettier --write --loglevel error --single-quote true \"./packages/*/{test,src}/**/*.{ts,js}\"",
+    "test":
+      "npm run build && npm run prettier && npm run lint && sh ./scripts/test.sh",
+    "lint":
+      "tslint './packages/*/{test,src}/{!typings}/*.{ts,js}' --format stylish --fix",
+    "prettier":
+      "prettier --write --loglevel error --single-quote true \"./packages/*/{test,src}/**/*.{ts,js}\"",
     "watch": "cd ./packages/tyranid && npm run watch",
     "bump": "npm run test && lerna publish"
   },
@@ -45,7 +46,7 @@
     "ts-node": "^3.2.0",
     "tslint": "5.5.0",
     "tslint-config-prettier": "1.10.0",
-    "typescript": "2.5.3",
+    "typescript": "2.8.3",
     "yargs": "3.12.0"
   }
 }
