--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "clean": "sh ./scripts/clean.sh",
     "build": "sh ./scripts/build.sh",
     "nd": "npm run clean && yarn",
+    "quick-test": "npm run build && sh ./scripts/test.sh",
     "test":
       "npm run build && npm run prettier && npm run lint && sh ./scripts/test.sh",
     "lint":
