--- a/packages/tyranid/package.json
+++ b/packages/tyranid/package.json
@@ -36,6 +36,7 @@
     "json-stable-stringify": "1.0.1",
     "lodash": "^3.10.1",
     "moment": "2.20.1",
+    "mongo-explain-match": "^0.0.4",
     "on-finished": "2.3.0",
     "socket.io": "2.0.3",
     "uglify-js": "2.8.16",
