--- a/packages/tyranid/package.json
+++ b/packages/tyranid/package.json
@@ -1,8 +1,7 @@
 {
   "name": "tyranid",
-  "version": "0.5.11",
-  "description":
-    "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
+  "version": "0.5.12",
+  "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/src/tyranid.js",
   "typings": "src/tyranid.d.ts",
   "scripts": {
