--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "private": true,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "docs": "ts-node ./doc/doc.js",
     "clean": "sh ./scripts/clean.sh",
     "build": "sh ./scripts/build.sh",
+    "build-tyranid": "sh ./scripts/build-tyranid.sh",
     "nd": "npm run clean && yarn",
     "quick-test": "npm run build && sh ./scripts/test.sh",
-    "test":
-      "npm run build && npm run prettier && npm run lint && sh ./scripts/test.sh",
-    "lint":
-      "tslint './packages/*/{test,src}/{!typings}/*.{ts,js}' --format stylish --fix",
-    "prettier":
-      "prettier --write --loglevel error --single-quote true \"./packages/*/{test,src}/**/*.{ts,js}\"",
+    "test": "npm run build && npm run prettier && npm run lint && sh ./scripts/test.sh",
+    "test-tyranid": "npm run build-tyranid && sh ./scripts/test-tyranid.sh",
+    "lint": "tslint './packages/*/{test,src}/{!typings}/*.{ts,js}' --format stylish --fix",
+    "prettier": "prettier --write --loglevel error --single-quote true \"./packages/*/{test,src}/**/*.{ts,js}\"",
     "watch": "cd ./packages/tyranid && npm run watch",
     "bump": "npm run test && lerna publish"
   },
@@ -20,20 +21,25 @@
     "@types/body-parser": "1.16.8",
     "@types/chai": "3.5.0",
     "@types/commander": "2.9.1",
+    "@types/connect-mongo": "0.0.33",
     "@types/express": "^4.11.0",
+    "@types/express-session": "1.15.8",
     "@types/graphql": "^0.12.3",
     "@types/lodash": "3.10.1",
     "@types/mocha": "2.2.43",
     "@types/mongodb": "2.2.7",
     "@types/node": "6.0.52",
+    "@types/puppeteer": "^1.3.2",
     "@types/socket.io-client": "^1.4.31",
     "ava": "0.16.0",
     "body-parser": "^1.18.2",
     "chai": "3.5.0",
     "chai-as-promised": "5.1.0",
     "codecov": "1.0.1",
+    "connect-mongo": "1.3.2",
     "eslint": "3.9.0",
     "express": "^4.16.2",
+    "express-session": "1.15.6",
     "graphql-server-express": "^1.3.2",
     "graphql-tools": "^2.19.0",
     "jquery": "3.1.1",
@@ -44,6 +50,7 @@
     "node-fetch": "1.7.1",
     "nyc": "8.3.0",
     "prettier": "1.11.1",
+    "puppeteer": "1.4.0",
     "ts-node": "^3.2.0",
     "tslint": "5.5.0",
     "tslint-config-prettier": "1.10.0",
